--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
                 </div>
             </div>
             <div class="card">
+                <img src="blog.jpg">
+                <div class="container">
+                    <h4><b>Blog</b></h4> 
+                    <p>
+                        <a href="https://maddycodr.github.io/Shashwat.github.io/" target="_blank">
+                        Click here to open
+                        </a>
+                    </p> 
+                </div>
+            </div>
+            <div class="card">
                 <img src="birthday.png">
                 <div class="container">
                     <h4><b>Birthday Wish Maker</b></h4> 
